# personal-messaging-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py
src/agent/: __init__.py  classifier.py  core.py  prompts.py  tools.py
src/api/: webhooks.py
src/db/: database.py  models.py
src/rag/: __init__.py  loader.py  store.py
src/services/: approval.py  handler.py  tracking.py
src/whatsapp/: client.py  models.py
tests/: test_agent.py  test_rag.py  test_whatsapp.py
