[project]
name = "personal-messaging-agent"
version = "0.1.0"
description = "WhatsApp AI agent for personal messaging operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-ai>=0.0.16",
    "anthropic>=0.40.0",
    "logfire[fastapi]>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.28.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.18",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
